<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EhaatActivity" >

    <LinearLayout
        android:id="@+id/linearLayout_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <LinearLayout
            android:id="@+id/LinearLayout_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_lat_deg"
                android:maxLength="2">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/EditText02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_lat_min_sec"
                android:maxLength="2"/>

            <EditText
                android:id="@+id/EditText03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_lat_min_sec"
                android:maxLength="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N"
                android:id="@+id/textView"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/EditText04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_lon_deg"
                android:maxLength="3"/>

            <EditText
                android:id="@+id/EditText05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_lon_min_sec"
                android:maxLength="2"/>

            <EditText
                android:id="@+id/EditText06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_lon_min_sec"
                android:maxLength="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="W"
                android:id="@+id/textView2"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_azim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From"
                android:id="@+id/textView5"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/EditText07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_dist_From_kilometer"
                android:maxLength="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="km - To"
                android:id="@+id/textView4"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/EditText08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_dist_To_kilometer"
                android:maxLength="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="km"
                android:id="@+id/textView7"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tx height"
                android:id="@+id/textView6"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/EditText09"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/default_tx_height_meter"
                android:maxLength="3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="m - "
                android:id="@+id/textView8"
                android:layout_weight="1"/>

            <Spinner
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:id="@+id/spinner"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="radials"
                android:id="@+id/textView9"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/button_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_getEHAAT_caption"
                android:layout_above="@+id/LinearLayout_calc"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_alignTop="@+id/button_get"
                android:layout_toRightOf="@+id/button_get"
                android:layout_toEndOf="@+id/button_get"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="120dp"
                android:layout_height="fill_parent"
                android:id="@+id/progressBar2"
                android:visibility="invisible"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout_main"
        android:background="@android:color/black"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/textViewResult"
            android:layout_below="@+id/linearLayout_main"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/white"
            android:layout_margin="2dp"/>
    </FrameLayout>

</RelativeLayout>